--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -4,8 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Group member\n",
+    "\n",
+    "**Name:** Shilong Yin  \n",
+    "**UNI:** sy2792\n",
+    "\n",
+    "**Name:** Diwei Xiong  \n",
+    "**UNI:** dx2183"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Introduction  \n",
-    "This file is for the use of cleaning dataset from: https://www.kaggle.com/paultimothymooney/blood-cells. The original dataset is divided into 4 folders, each stands for a different cell type, for both train and test data. And there are some duplicate pictures in these files (different files from different classes but with the same name). Now the dataset is merged into only two files: train and test, and delete the images with same names. A csv file with image id and its label is created for later reference."
+    "This file is for the use of cleaning dataset from: https://www.kaggle.com/paultimothymooney/blood-cells. The original dataset is divided into 4 folders, each stands for a different cell type, for both train and test data. And there are some duplicate pictures in these files (different files from different classes but with the same name). Now the dataset is merged into only two files: train and test, and delete the images with same names. Two csv files with image id and its label is created for later reference."
    ]
   },
   {
@@ -44,7 +57,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merge data"
+    "## Merge data\n",
+    "\n",
+    "Search all files in four folders, store the file names in X and corresponding labels in Y."
    ]
   },
   {
@@ -53,9 +68,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Store file names and labels in vectors\n",
+    "\n",
     "def merge(path):\n",
-    "    X = []\n",
-    "    Y = []\n",
+    "    X = []  # vectors containing file names\n",
+    "    Y = []  # vectors containing labels\n",
+    "    \n",
     "    for wbc_type in os.listdir(path):\n",
     "        if wbc_type == 'NEUTROPHIL':\n",
     "            label = dict_characters['NEUTROPHIL']\n",
@@ -104,7 +122,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Delete duplicate data"
+    "## Delete duplicate data\n",
+    "\n",
+    "Delete files with duplicate names to avoid confusion.  \n",
+    "\n",
+    "At the same time, merge images from four folders in file explorer and only retain the first with the same name."
    ]
   },
   {
@@ -114,7 +136,7 @@
    "outputs": [],
    "source": [
     "train_dataset = pd.DataFrame({'id':X_train,'label':Y_train})\n",
-    "train_dataset = train_dataset.drop_duplicates('id','first')\n",
+    "train_dataset = train_dataset.drop_duplicates('id','first')  # Only retain the first file with the same name\n",
     "\n",
     "test_dataset = pd.DataFrame({'id':X_test,'label':Y_test})\n",
     "test_dataset = test_dataset.drop_duplicates('id','first')"
@@ -291,14 +313,16 @@
    ],
    "source": [
     "if len(train_dataset['id']) == train_dataset['id'].nunique() and len(test_dataset['id']) == test_dataset['id'].nunique():\n",
-    "    print('Data is clean.')"
+    "    print('Data is clean.')  # Make sure that all the file names in dataset is unique"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Output .csv file"
+    "## Output .csv file\n",
+    "\n",
+    "Save the clean datasets to csv files."
    ]
   },
   {
